12-kubernetes-05-cni/manifests/check_policy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: check
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: check-node
  policyTypes:
    - Ingress
